fixed loggedin username overlap style issue

--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -110,6 +110,7 @@ ul#taglist {
   font-weight: bold;
   line-height: 6px;
   padding: 6px;
+  width: auto;
 }
 
 label{
